--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "firebase": "^11.5.0",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
+    "node-fetch": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
-    "youtube-transcript": "^1.2.1"
+    "youtube-transcript": "^1.2.1",
+    "youtubei.js": "^13.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
